--- a/app/views/volumes/_form.html.erb
+++ b/app/views/volumes/_form.html.erb
@@ -1,11 +1,27 @@
 <%= form_with(model: @volume, local: true ) do |f| %>
 
+  <%= f.hidden_field :id, :value => @volume.book_id %>
+
   <%= f.label :title %>
   <%= f.text_field :title, class: "form-control" %>
   
   <%= f.label :content %>
   <%= f.text_field :content, class: "form-control" %>
   
+  <%= f.fields_for :pictures do |pi| %>
+  <%= pi.file_field :picture,  multiple: true, accept: 'image/jpeg,image/gif,image/png' %>
+  <% end %>
+  
   <%= f.submit "送信", class: "btn btn-primary" %>
 
+
 <% end %>
+
+<script type="text/javascript">
+  $('#micropost_picture').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
