--- a/app/views/books/posts_index.html.erb
+++ b/app/views/books/posts_index.html.erb
@@ -2,9 +2,11 @@
 <%= link_to 'new', new_book_path %><br><br>
 <% @books.each do |book| %>
 
-  <%= book.title %>
+  <br><%= book.title %>
   <%= link_to 'edit', edit_book_path(book) %>
   <%= link_to 'destroy', book, method: :delete, data: { confirmtion: "削除してもいいですか？" } %>
   <%= link_to 'volume-show', volume_path(book) %>
+  <%= image_tag book.picture.url if book.picture? %><br>
+
 
 <% end %>
