--- a/app/views/books/viewer_index.html.erb
+++ b/app/views/books/viewer_index.html.erb
@@ -1,2 +1,9 @@
 <h1>Books#viewer_index</h1>
-<p>Find me in app/views/books/viewer_index.html.erb</p>
+<div class= "row book-bocks">
+  <% @books.each do |book| %>
+    <div class= "col-md-4 book-margin">
+      <%= link_to book.title, volume_path(book), class: "book-title" %><br>
+      <%= image_tag book.picture.url if book.picture.presence %>
+    </div>
+  <% end %>
+</div>
