--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "home", root_path %>
 <%= link_to "login", login_path unless logged_in? %>
 <%= link_to "logout", logout_path, method: :delete if logged_in? %>
 <%= link_to 'new-user', new_user_path %>
