--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,15 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <%= yield %>
+    <div class= "container">
+      <div class="row">
+    　　<div class= "col-sm-3">
+    　　    <%= render 'layouts/sidbar' %>
+   　　   </div>
+      <div class="col-sm-9">
+        <%= yield %>
+      </div>
+    </div>
+    </div>
   </body>
 </html>
