--- a/app/views/layouts/_sidbar.html.erb
+++ b/app/views/layouts/_sidbar.html.erb
@@ -1,3 +1,4 @@
+<% unless current_user.nil? %>
 <div class= "user_sidber">
   name: <%= link_to current_user.name, edit_user_path(current_user) %><br>
   books-Number-of-turns: <%= link_to current_user.books.count, books_posts_path %><br>
@@ -8,3 +9,4 @@
 <div class= "history_sidbar">
   高評価Top10
 </div>
+<% end %>
