--- a/app/views/volumes/picture_show.html.erb
+++ b/app/views/volumes/picture_show.html.erb
@@ -1,7 +1,2 @@
-<% @pictures.each do |picture| %>
-  
 
-<%= render 'pictures_list', picture: picture %>
-</div>
-
-<% end %>
+<%= render 'volumes/picture_show_chenge' %>
