--- a/app/views/volumes/show.html.erb
+++ b/app/views/volumes/show.html.erb
@@ -20,13 +20,15 @@
   <div>
   <div><%= link_to "new", new_volume_path(id: @book.id) %></div>
   <div><%= link_to "coment_new", new_evaluation_path(book_id: @book.id) %></div>
+  <div><%= link_to "coment_edit", edit_evaluation_path(book_id: @book.id) %></div>
+
   </div>
   <% @volumes.each.with_index(1) do |volume, i| %>
     <table class= "table-bordered" >
       <tr>
         <th rowspan="2"class= "chapter-index"><%= i %></th>
         <th class= "chapter-title" >
-          <%= link_to volume.title, '#', class: "chapter-title" %>
+          <%= link_to volume.title, pictures_show_path(id: volume.id), class: "chapter-title" %>
           <%= link_to "position", picture_show_path(id: volume.id) %>
           <% if current_user.id == @book.user_id %>
             <%= link_to "edit", edit_volume_path(id: volume.id) %>
