--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Books#new</h1>
-<%= render 'form' %>
+<div class= "border-k-m">
+  <h1 class= "page-title">Books#new</h1>
+  <%= render 'form' %>
+</div>
