--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,34 @@
-<%= link_to "home", root_path %>
-<%= link_to "login", login_path unless logged_in? %>
-<%= link_to "logout", logout_path, method: :delete if logged_in? %>
-<%= link_to 'new-user', new_user_path %>
-<%= link_to "users", users_path %>
-<%= link_to "posts-books", books_posts_path %>
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "home", root_path, id: "logo" %>
+    </div>
+    <nav>
+      <ul id="navbar" class="nav navbar-nav navbar-right navbar-collapse collapse">
+        <li><%= link_to "home", root_path %></li>
+        <% if logged_in? %>
+        <% if current_user.admin? %>
+          <li><%= link_to "users", users_path %></li>
+        <% end %>
+          <li class="dropdown">
+            <a href="" class="dropdown-toggle" data-toggle="dropdown">profile<b class="caret"></b></a>
+            <ul class = "dropdown-menu dropdown-menu-color">
+              <li><%= link_to "posts-books", books_posts_path(id: current_user.id) %></li>
+              <li><%= link_to "Setting", edit_user_path(current_user) %></li>
+              <li><%= link_to "logout", logout_path, method: :delete %></li>
+            </ul>
+           </li>
+        <% else %>
+          <li><%= link_to 'new-user', new_user_path %> </li>
+          <li><%= link_to "login", login_path %></li>
+        <% end %>
+      </ul>
+    </nav>
+  </div>
+</header>
