--- a/app/views/volumes/_picture_show_chenge.html.erb
+++ b/app/views/volumes/_picture_show_chenge.html.erb
@@ -1,5 +1,5 @@
 <div class="picture">
-  <%= link_to "←", picture_show_chenge_volume_path(id: @picture.volume_id, move: "up", position: @picture.position), remote: true %>
-  <%= image_tag @picture.picture.url %>
-  <%= link_to "→", picture_show_chenge_volume_path(id: @picture.volume_id, move: "down", position: @picture.position), remote: true %>
+  <%= link_to "←", picture_show_chenge_volume_path(id: @picture.volume_id, move: "up", position: @picture.position), remote: true, class: "chenge-picuture-show-left" %>
+  <%= image_tag @picture.picture.url, class: "image-picuture-show" %>
+  <%= link_to "→", picture_show_chenge_volume_path(id: @picture.volume_id, move: "down", position: @picture.position), remote: true, class: "chenge-picuture-show-right" %>
 </div>
