--- a/app/views/volumes/change_position.js.erb
+++ b/app/views/volumes/change_position.js.erb
@@ -1,2 +1,2 @@
-$("#picture_<%= @picture.position %>").replaceWith('<%=j render "volumes/pictures_list", picture: @picture %>')
-$("#picture_<%= @target.position %>").replaceWith('<%=j render "volumes/pictures_list", picture: @target %>')
+$(".picture_<%= @picture.position %>").replaceWith('<%=j render "volumes/pictures_list", picture: @picture %>')
+$(".picture_<%= @target.position %>").replaceWith('<%=j render "volumes/pictures_list", picture: @target %>')
