--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -4,19 +4,20 @@
   <%= f.text_field :title, class: "form-control" %>
   
   <%= f.label :content %>
-  <%= f.text_field :content, class: "form-control" %>
+  <%= f.text_area :content, size: "20x10", maxlength: "350", class: "form-control" %><br>
   
+  
+  <% if @book.picture? %>
+    <%= image_tag @book.picture.url %>
+    <br><p><%= f.check_box :remove_picture %>画像を削除する</p>
+  <% end %>
   <%= f.file_field :picture, id: :book_img, accept: 'image/jpeg,image/gif,image/png' %>
   
   <div id="picture_prev" ></div><br>
-  <% if @book.picture? %>
-  現在の画像<br>
-  <%= image_tag @book.picture.url %>
-  <p><%= f.check_box :remove_picture %>画像を削除する</p>
-  <% end %>
   
-  
-  <%= f.submit "送信", class: "btn btn-primary" %>
+  <div class= "submit-button">
+    <%= f.submit "作成", class: "btn btn-primary" %>
+  </div>
 
 <% end %>
 
