--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Books#edit</h1>
-<%= render 'form' %>
+<div class= "border-k-m">
+  <h1 class= "page-title">Books#edit</h1>
+  <%= render 'form' %>
+</div>
