--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,13 +1,17 @@
-<div class="like-link" id="like-link-<%= @book.id %>">
-  <% if current_user.favorites.find_by(book_id: @book.id) %>
-    <%= link_to unfavorites_path(book_id: @book.id), method: :delete, remote: true do %>
-      <div class= "favorite">お気に入り</div>
+<% unless current_user.nil? || current_user.id == @book.user_id %>
+  <div class="like-link" id="like-link-<%= @book.id %>">
+    <% if current_user.favorites.find_by(book_id: @book.id) %>
+      <%= link_to unfavorites_path(book_id: @book.id), method: :delete, remote: true do %>
+        <div class= "favorite">お気に入り</div>
+      <% end %>
+    <% else %>
+      <%= link_to favorites_path(book_id: @book.id), method: :post, remote: true do %>
+        <div class= "unfavorite">お気に入り</div>
+      <% end %>
     <% end %>
-    <div>お気に入り登録数<%= @book.favorites.count %></div>
-  <% else %>
-    <%= link_to favorites_path(book_id: @book.id), method: :post, remote: true do %>
-      <div class= "unfavorite">お気に入り</div>
-    <% end %>
-    <div>お気に入り登録数<%= @book.favorites.count %></div>
-  <% end %>
-</div>
+    &emsp;お気に入り登録数<%= @book.favorites.count %>
+  </div>
+<% end %>
+<% if current_user.id == @book.user_id %>
+  <div class= "button"><%= link_to "edit", edit_book_path(@book) %></div>
+<% end %>
