--- a/app/views/layouts/_sidbar.html.erb
+++ b/app/views/layouts/_sidbar.html.erb
@@ -1,12 +1,44 @@
 <% unless current_user.nil? %>
-<div class= "user_sidber">
-  name: <%= link_to current_user.name, edit_user_path(current_user) %><br>
-  books-Number-of-turns: <%= link_to current_user.books.count, books_posts_path %><br>
-  favorite: <%= current_user.favorite_books.count %>
-  <br>
-</div>
-
-<div class= "history_sidbar">
-  高評価Top10
-</div>
+  <div class= "user_sidber border-css">
+    name: <%= current_user.name %>
+    <div class= "button"><%= link_to "edit", edit_user_path(current_user) %></div><br>
+    books-Number-of-turns: <%= link_to current_user.books.count, books_posts_path(id: current_user.id), class: "button-t-c" %><br>
+    favorite: <%= current_user.favorite_books.count %>
+    <br>
+  </div>
 <% end %>
+
+
+<% unless @evalutop.nil? %>
+  <div class= "evaluations-css border-css">
+    高評価Top10<br>
+    <% @evalutop.each do |evalu| %>
+      <div class= "sid-hr">
+        <div class= "book-image"><%= image_tag evalu.picture.url, :size =>'70x100' if evalu.picture.nil? %></div>
+        <div class= "sid-cont">
+          <%= link_to evalu.title, volume_path(evalu), class: "button-t-c" %><br>
+          <div class="field" id="star-<%= evalu.id %>"></div>
+          <%= evalu_average(evalu) %>
+        </div>
+      </div>
+      
+      <script>
+        $(window).ready(function(){
+          $('#star-<%= evalu.id %>').empty();
+          $('#star-<%= evalu.id %>').raty({
+            size     : 36,
+            starOff:  '<%= asset_path('star-off.png') %>',
+            starOn : '<%= asset_path('star-on.png') %>', 
+            starHalf: '<%= asset_path('star-half.png') %>',
+            half: true,
+            readOnly: true,
+            score: <%= evalu_average(evalu) %>
+          });
+        });
+      </script>
+  
+    <% end %>
+  </div>
+<% end %>
+
+
