--- a/app/views/layouts/picuture-prevu.html.erb
+++ b/app/views/layouts/picuture-prevu.html.erb
@@ -10,20 +10,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= render 'layouts/header' %>
-    <% flash.each do |message_type, message| %>
-      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
-    <% end %>
-    <%= render 'shared/error_messages' %>
+  <body class= "body-picuture-show">
     <div class= "container">
       <div class="row">
-    　　<div class= "col-sm-3">
-    　　    <%= render 'layouts/sidbar' %>
-   　　   </div>
-        <div class="col-sm-9">
-          <%= yield %>
-        </div>
+        <%= yield %>
       </div>
     </div>
   </body>
