--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
   
   <%= f.label :name %>
   <%= f.text_field :name, class: "form-control" %>
-  
+
   <%= f.label :email %>
   <%= f.email_field :email, class: "form-control" %>
   
@@ -12,6 +12,9 @@
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation, class:"form-control" %>
   
-  <%= f.submit "作成", class: "btn btn-primary" %>
+  <div class= "submit-button">
+    <%= f.submit "作成", class: "btn btn-primary" %>
+  </div>
+  <%= link_to 'login', login_path, class: "login-m" %>
   
 <% end %>
