--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Users#edit</h1>
-<%= render 'form' %>
+<div class="row">
+  <div class= "border-k-m col-md-6 col-md-offset-3">
+    <h1 class= "page-title">Users#edit</h1>
+    <%= render 'form' %>
+  </div>
+</div>
